--- a/projeto_final/loja/templates/adicionar_produto.html
+++ b/projeto_final/loja/templates/adicionar_produto.html
@@ -1,20 +1,28 @@
 <!-- adicionar_produto.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar Produto</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    <h1>Adicionar Produto</h1>
+    <header>
+        <h1>Adicionar Produto</h1>
+    </header>
 
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Adicionar Produto</button>
-    </form>
+    <div class="form-container">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="submit-button">Adicionar Produto</button>
+        </form>
+    </div>
 
-    <a href="{% url 'listar_produtos' %}">Voltar para a lista de produtos</a>
+        <div class="back-link">
+            <a href="{% url 'listar_produtos' %}" class="back-button">Voltar para a lista de produtos</a>
+        </div>
 </body>
 </html>
