--- a/projeto_final/loja/templates/listar_clientes.html
+++ b/projeto_final/loja/templates/listar_clientes.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,8 @@
     <header>
         <h1>Lista de Clientes</h1>
     </header>
+
+    <div class="form-container">
         <table>
             <thead>
                 <tr>
@@ -18,6 +20,7 @@
                     <th>Nome</th>
                     <th>Telefone</th>
                     <th>Email</th>
+                    <th>Password</th>
                 </tr>
             </thead>
             <tbody>
@@ -27,6 +30,7 @@
                         <td>{{ cliente.nome }}</td>
                         <td>{{ cliente.telefone }}</td>
                         <td>{{ cliente.email }}</td>
+                        <td>{{ cliente.password }}</td>
                     </tr>
                 {% empty %}
                     <tr>
@@ -36,7 +40,14 @@
             </tbody>
         </table>
 
-    <a href="{% url 'adicionar_cliente' %}" class="add-button">Adicionar Novo Cliente</a>
-    <a href="{% url 'dashboard' %}" class="add-button">Voltar</a>
+        <!-- Botão de Adicionar -->
+        <form action="{% url 'adicionar_cliente' %}" method="get">
+            <button type="submit" class="submit-button">Adicionar Novo Cliente</button>
+        </form>
+    </div>
+
+    <div class="back-link">
+        <a href="{% url 'dashboard' %}" class="back-button">Voltar</a>
+    </div>
 </body>
 </html>
