--- a/projeto_final/loja/templates/listar_funcionarios.html
+++ b/projeto_final/loja/templates/listar_funcionarios.html
@@ -1,36 +1,53 @@
-<!-- listar_funcionarios.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Funcionários</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    <h1>Lista de Funcionários</h1>
+    <header>
+        <h1>Lista de Funcionários</h1>
+    </header>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Nome</th>
-                <th>Telefone</th>
-                <th>Email</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for funcionario in funcionarios %}
+    <div class="form-container">
+        <table>
+            <thead>
                 <tr>
-                    <td>{{ funcionario.id_funcionario }}</td>
-                    <td>{{ funcionario.nome }}</td>
-                    <td>{{ funcionario.telefone }}</td>
-                    <td>{{ funcionario.email }}</td>
+                    <th>ID</th>
+                    <th>Nome</th>
+                    <th>Telefone</th>
+                    <th>Email</th>
+                    <th>Password</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for funcionario in funcionarios %}
+                    <tr>
+                        <td>{{ funcionario.id_funcionario }}</td>
+                        <td>{{ funcionario.nome }}</td>
+                        <td>{{ funcionario.telefone }}</td>
+                        <td>{{ funcionario.email }}</td>
+                        <td>{{ funcionario.password }}</td>
+                    </tr>
+                {% empty %}
+                    <tr>
+                        <td colspan="4" class="empty-row">Nenhum funcionário encontrado.</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
-    <a href="{% url 'adicionar_funcionario' %}">Adicionar Novo Funcionário</a>
-    <a href="{% url 'dashboard' %}" class="add-button">Voltar</a>
+        <!-- Botão de Adicionar -->
+        <form action="{% url 'adicionar_funcionario' %}" method="get">
+            <button type="submit" class="submit-button">Adicionar Novo Funcionário</button>
+        </form>
+    </div>
+
+    <div class="back-link">
+        <a href="{% url 'dashboard' %}" class="back-button">Voltar</a>
+    </div>
 </body>
 </html>
