--- a/projeto_final/loja/templates/listar_veiculos.html
+++ b/projeto_final/loja/templates/listar_veiculos.html
@@ -5,37 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Veículos</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">  <!-- Carrega o arquivo CSS -->
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
     <header>
-        <h1>Lista de Veículos</h1>  <!-- Cabeçalho da página -->
+        <h1>Lista de Veículos</h1>
     </header>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>  <!-- Cabeçalho da coluna ID -->
-                <th>Matrícula</th>  <!-- Cabeçalho da coluna Matrícula -->
-                <th>Modelo</th>  <!-- Cabeçalho da coluna Modelo -->
-            </tr>
-        </thead>
-        <tbody>
-            {% for veiculo in veiculos %}  <!-- Itera sobre os veículos -->
+    <div class="form-container">
+        <table>
+            <thead>
                 <tr>
-                    <td>{{ veiculo.id_veiculo }}</td>  <!-- Exibe o ID do veículo -->
-                    <td>{{ veiculo.matricula }}</td>  <!-- Exibe a matrícula do veículo -->
-                    <td>{{ veiculo.modelo }}</td>  <!-- Exibe o modelo do veículo -->
+                    <th>ID</th>
+                    <th>Matrícula</th>
+                    <th>Modelo</th>
                 </tr>
-            {% empty %}
-                <tr>
-                    <td colspan="3" class="empty-row">Nenhum veículo encontrado.</td>  <!-- Mensagem quando não há veículos -->
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for veiculo in veiculos %}
+                    <tr>
+                        <td>{{ veiculo.id_veiculo }}</td>
+                        <td>{{ veiculo.matricula }}</td>
+                        <td>{{ veiculo.modelo }}</td>
+                    </tr>
+                {% empty %}
+                    <tr>
+                        <td colspan="3" class="empty-row">Nenhum veículo encontrado.</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
-    <a href="{% url 'adicionar_veiculo' %}" class="add-button">Adicionar Novo Veículo</a>  <!-- Link para adicionar um novo veículo -->
-    <a href="{% url 'dashboard' %}" class="add-button">Voltar</a>
+        <!-- Botão de Adicionar -->
+        <form action="{% url 'adicionar_veiculo' %}" method="get">
+            <button type="submit" class="submit-button">Adicionar Novo Veículo</button>
+        </form>
+    </div>
+
+    <div class="back-link">
+        <a href="{% url 'dashboard' %}" class="back-button">Voltar</a>
+    </div>
 </body>
 </html>
