--- a/projeto_final/loja/templates/sucesso.html
+++ b/projeto_final/loja/templates/sucesso.html
@@ -1,12 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compra Finalizada</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    <h1>Compra Finalizada com Sucesso!</h1>
-    <p>A sua encomenda foi criada com sucesso e será processada em breve.</p>
+    <div class="form-container">
+        <h1>Compra Finalizada com Sucesso!</h1>
+        <p>A sua encomenda foi criada com sucesso e será processada em breve.</p>
+        <div style="text-align: center; margin-top: 20px;">
+            <a href="{% url 'loja' %}" class="submit-button">Voltar para a loja</a>
+        </div>
+    </div>
 </body>
 </html>
